# DatabasesEverywhere

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  config.example.yml  config.local.yml  config.yml  docker-compose.yml  docs.md  openapi.yml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  docker.yml  release.yml
bins/: fusequota  fusequota.version  socket-bridge
helpers/: README.md  socket_bridge.rs
migrations/: 20260616230000_create_instance_metadata.sql  20260618120000_create_import_export_jobs.sql  20260701143000_create_instance_route_auth.sql  20260701152000_add_mariadb_root_password.sql  20260707223000_add_mongodb_root_password.sql  20260709120000_enforce_unique_instance_routes.sql  20260712120000_add_mysql_route_auth.sql
src/: bins.rs  cli.rs  lib.rs  main.rs
src/api/: allowed_hosts.rs  api_response.rs  artifacts.rs  backups.rs  config_admin.rs  handlers.rs  images.rs  import_export.rs  instance_create.rs  instance_requests.rs  instances.rs  metrics.rs  mod.rs  progress.rs  public_diagnostic.rs  recovery.rs  request_trace.rs  resources.rs  routes.rs  security.rs  security_policy.rs  system.rs  upgrade.rs  websocket.rs  ws_tokens.rs
src/auth/: api_token.rs  jwt.rs  mod.rs  scopes.rs
src/config/: load.rs  mod.rs  path_policy.rs  validate.rs
src/constants/: mod.rs
src/databases/: mod.rs
src/disk/: btrfs.rs  fuse_quota.rs  linux_project.rs  mod.rs  mounts.rs  project_id.rs  xfs.rs  zfs.rs
src/gateway/: listeners.rs  mod.rs  resolver.rs  security.rs  supervisor.rs  tls.rs  tunnel.rs
src/instances/: locks.rs  manager.rs  metadata.rs  mod.rs  paths.rs  reconcile.rs  state.rs
src/jobs/: mod.rs
src/monitoring/: mod.rs
src/panel/: mod.rs
src/protocols/: clickhouse.rs  mariadb.rs  mongodb.rs  postgres.rs  qdrant.rs  redis.rs
src/runtime/: docker.rs  mod.rs  (+1 more)
(+48 files in other folders)
